Mobile first, and correct overlap via font-size

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
 
 body {
     display: block;
-    min-width: 360px;
+    min-width: 320px;
     background: #dd6123;
     background: -moz-linear-gradient(left, #dd6123 0%, #dd4900 100%);
     background: -webkit-gradient(linear, left top, right top, color-stop(0%, #dd6123), color-stop(100%, #dd4900));
@@ -42,18 +42,28 @@ h1, h2, h3 {
 
 h1 {
     font-family: squealerregular;
-    font-size: 7em;
+    font-size: 2.5em;
+    padding-top: 10%;
 }
 
-@media screen and (max-width: 490px) {
+@media screen and (min-width: 450px) {
     h1 {
-        width: 93%;
+        font-size: 4em;
+        padding-top: 5%;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 750px) {
     h1 {
-        font-size: 3em;
+        font-size: 5em;
+        padding-top: 4%;
+    }
+}
+
+@media screen and (min-width: 850px) {
+    h1 {
+        font-size: 6em;
+        padding-top: 2%;
     }
 }
 
